--- a/libs/copilot/package.json
+++ b/libs/copilot/package.json
@@ -14,9 +14,6 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "uuid": "^9.0.0",
     "@chainlit/app": "workspace:^",
     "@chainlit/react-client": "workspace:^",
     "class-variance-authority": "^0.7.1",
@@ -25,11 +22,14 @@
     "i18next": "^23.7.16",
     "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-i18next": "^14.0.0",
     "recoil": "^0.7.7",
     "sonner": "^1.2.3",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^8.4.7",
@@ -50,7 +50,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "storybook": "^8.4.7",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.2.2",
     "vite": "^4.4.9",
     "vite-plugin-svgr": "^4.2.0",
